@@ -26,6 +26,7 @@
   "with-value!" :arg1-body
   "with-span!" :arg1-body
   "with-span-binding" :binding
+  "with-span-binding'" :binding
 
   ;; examples
   "catch-all" :flow-body
