@@ -128,20 +128,28 @@
   |`:links`     | Collection of links to add to span. Each link is `[sc]` or `[sc attr-map]`, where `sc` is a `SpanContext`, `Span` or `Context` containing the linked span and `attr-map` is a map of attributes of the link (default: no links).
   |`:attributes`| Map of additional attributes for the span (default: no attributes).
   |`:thread`    | Thread identified as that which started the span, or `nil` for no thread. Data on this thread is merged with the `:attributes` value (default: current thread).
+  |`:source`    | Map describing source code where span is started. Optional keys are `:fn`, `:ns`, `:line` and `:file` (default: {}).
   |`:span-kind` | Span kind, one of `:internal`, `:server`, `:client`, `:producer`, `:consumer` (default: `:internal`). See also `SpanKind`.
   |`:timestamp` | Start timestamp for the span. Value is either an `Instant` or vector `[amount ^TimeUnit unit]` (default: current timestamp)."
   ^Context
-  [{:keys [^Tracer tracer name parent links attributes ^Thread thread span-kind timestamp]
+  [{:keys [^Tracer tracer name parent links attributes ^Thread thread source span-kind timestamp]
     :or   {name       ""
            parent     (context/current)
            attributes {}
-           thread     (Thread/currentThread)}}]
+           thread     (Thread/currentThread)
+           source     {}}}]
   (let [tracer'        (or tracer (get-default-tracer!))
         parent-context (or parent (context/root))
-        default-attributes (if thread
-                             {SemanticAttributes/THREAD_NAME (.getName thread)
-                              SemanticAttributes/THREAD_ID   (.getId thread)}
-                             {})
+        {:keys [fn ns line file]} source
+        default-attributes (cond-> {}
+                             thread (assoc SemanticAttributes/THREAD_NAME
+                                           (.getName thread)
+                                           SemanticAttributes/THREAD_ID
+                                           (.getId thread))
+                             fn     (assoc SemanticAttributes/CODE_FUNCTION fn)
+                             ns     (assoc SemanticAttributes/CODE_NAMESPACE ns)
+                             line   (assoc SemanticAttributes/CODE_LINENO line)
+                             file   (assoc SemanticAttributes/CODE_FILEPATH file))
         attributes'    (merge default-attributes attributes)
         builder        (cond-> (.spanBuilder tracer' name)
                          :always   (.setParent parent-context)
@@ -302,14 +310,9 @@
         (.end span amount unit))
       (.end span))))
 
-(defmacro with-span-binding
-  "Starts a new span, binds `context` to the new context containing the span
-  and evaluates `body`. The span is ended on completion of body evaluation.
-  It is expected `body` provides a synchronous result, use [[async-span]]
-  instead for working with asynchronous functions. Does not use nor set the
-  current context. `span-opts` is a span options map, the same as for
-  [[new-span!]]. See also [[with-span!]]."
-  [[context span-opts] & body]
+#_{:clj-kondo/ignore [:missing-docstring]}
+(defmacro with-span-binding'
+  ^:no-doc [[context span-opts] & body]
   `(let [~context (new-span! ~span-opts)]
      (try
        ~@body
@@ -319,19 +322,70 @@
        (finally
          (end-span! {:context ~context})))))
 
+(defmacro with-span-binding
+  "Starts a new span, binds `context` to the new context containing the span
+  and evaluates `body`. The span is ended on completion of body evaluation.
+  It is expected `body` provides a synchronous result, use [[async-span]]
+  instead for working with asynchronous functions. Does not use nor set the
+  current context. `span-opts` is a span options map, the same as for
+  [[new-span!]], except that the default values for `:line`, `:file` and `:ns`
+  for the `:source` option map are set from the place `with-span-binding` is
+  evaluated. See also [[with-span!]]."
+  [[context span-opts] & body]
+  `(let [span-opts# ~span-opts
+         source#    (into {:line ~(:line (meta &form))
+                           :file ~*file*
+                           :ns   ~(str *ns*)}
+                          (:source span-opts#))
+         span-opts# (assoc span-opts# :source source#)]
+     (with-span-binding' [~context span-opts#]
+       ~@body)))
+
 (defmacro with-span!
   "Starts a new span, sets the current context to the new context containing
   the span and evaluates `body`. The current context is restored to its
   previous value and the span is ended on completion of body evaluation.
   It is expected `body` provides a synchronous result, use [[async-span]]
   instead for working with asynchronous functions. `span-opts` is a span
-  options map, the same as for [[new-span!]]. See also [[with-span-binding]]."
+  options map, the same as for [[new-span!]], except that the default values
+  for `:line`, `:file` and `:ns` for the `:source` option map are set from the
+  place `with-span!` is evaluated. See also [[with-span-binding]]."
   [span-opts & body]
-  `(with-span-binding [context# ~span-opts]
-     (context/with-context! context#
-       ~@body)))
+  `(let [span-opts# ~span-opts
+         source#    (into {:line ~(:line (meta &form))
+                           :file ~*file*
+                           :ns   ~(str *ns*)}
+                          (:source span-opts#))
+         span-opts# (assoc span-opts# :source source#)]
+     (with-span-binding' [context# span-opts#]
+       (context/with-context! context#
+         ~@body))))
 
-(defn async-span
+#_{:clj-kondo/ignore [:missing-docstring]}
+(defn async-span'
+  ^:no-doc [span-opts f respond raise]
+  (try
+    (let [context (new-span! span-opts)]
+      (try
+        (f context
+           (fn [response]
+             (end-span! {:context context})
+             (respond response))
+           (fn [e]
+             (if (instance? Throwable e)
+               (add-exception! e {:context context})
+               (add-span-data! {:context context
+                                :status  {:code :error}}))
+             (end-span! {:context context})
+             (raise e)))
+        (catch Throwable e
+          (add-exception! e {:context context})
+          (end-span! {:context context})
+          (raise e))))
+    (catch Throwable e
+      (raise e))))
+
+(defmacro async-span
   "Starts a new span and immediately returns evaluation of function `f`.
   `respond`/`raise` are callback functions to be evaluated later on a
   success/failure result. The span is ended just before either callback is
@@ -339,32 +393,20 @@
   current context. This is a low-level function intended for adaption for use
   with any async library that can work with callbacks.
 
-  `span-opts` is the same as for [[new-span!]]. `f` must take arguments
-  `[context respond* raise*]` where `context` is a context containing the new
-  span, `respond*` and `raise*` are callback functions to be used by `f`. All
-  callback functions take a single argument, `raise` and `raise*` take a
-  `Throwable` instance."
-  ([span-opts f respond raise]
-   (try
-     (let [context (new-span! span-opts)]
-       (try
-         (f context
-            (fn [response]
-              (end-span! {:context context})
-              (respond response))
-            (fn [e]
-              (if (instance? Throwable e)
-                (add-exception! e {:context context})
-                (add-span-data! {:context context
-                                 :status  {:code :error}}))
-              (end-span! {:context context})
-              (raise e)))
-         (catch Throwable e
-           (add-exception! e {:context context})
-           (end-span! {:context context})
-           (raise e))))
-     (catch Throwable e
-       (raise e)))))
+  `span-opts` is the same as for [[new-span!]], except that the default values
+  for `:line`, `:file` and `:ns` for the `:source` option map are set from the
+  place `async-span` is evaluated. `f` must take arguments `[context respond*
+  raise*]` where `context` is a context containing the new span, `respond*` and
+  `raise*` are callback functions to be used by `f`. All callback functions
+  take a single argument, `raise` and `raise*` take a `Throwable` instance."
+  [span-opts f respond raise]
+  `(let [span-opts# ~span-opts
+         source#    (into {:line ~(:line (meta &form))
+                           :file ~*file*
+                           :ns   ~(str *ns*)}
+                          (:source span-opts#))
+         span-opts# (assoc span-opts# :source source#)]
+     (async-span' span-opts# ~f ~respond ~raise)))
 
 (defn span-interceptor
   "Returns a Pedestal interceptor that will on entry start a new span and add
